# cookiecutter-fastapi-users-template

./: cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
test1/app/: main.py
test1/app/core/: auth.py  settings.py
test1/app/db/: users.py
test1/app/dependencies/: roles.py
test1/app/managers/: users.py
test1/app/models/: users.py
test1/app/routers/: default.py  users.py
test1/app/schemas/: users.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/app/: .env.example
{{cookiecutter.project_slug}}/app/core/: create_admin.py  settings.py
