[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "FastAPI project with FastAPI Users template"
authors = [{name="{{ cookiecutter.author_name }}"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "fastapi-users[sqlalchemy2]==11.0.2",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic",
    "passlib[bcrypt]"
]
